# tailwindsql-rust

./: .gitignore  Cargo.toml  README.md  next.config.js  package.json  repository.url  tailwind.config.js
src/: db.rs  lib.rs  main.rs  parser.rs  query_builder.rs  render.rs
src/app/: globals.css  page.tsx
src/app/api/schema/: route.ts
src/components/: DatabaseExplorer.tsx  Playground.tsx
src/lib/: index.ts
static/: explorer.js  playground.js  styles.css
templates/: explorer.html  index.html
