[package]
name = "tailwindsql"
version = "0.1.0"
edition = "2021"
description = "Tailwind-style SQL query playground built with Rust and SQLite."
license = "MIT"
repository = "https://github.com/mmarinovic/tailwindsql"
homepage = "https://tailwindsql.xyz"
keywords = ["sql", "sqlite", "axum", "demo", "playground"]
categories = ["web-programming", "database"]

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
askama = "0.12"
